# 2020-IA-bonnes-pratiques-notebook

./: .gitignore  README.md  pyproject.toml
0-Initial-Project/: Untitled.ipynb
1-Better-Notebook/: Extra visualisations.ipynb  Iris Classification.ipynb  Untitled.ipynb  notes.txt
1-Better-Notebook/Extra Files/: Extra visualisations.ipynb
2-Extra-Files/: Iris Classification.ipynb
2-Extra-Files/Extra dependency management/: Pipfile  requirements.txt
3-Separate-Notebooks/data/processed/: iris_training_data.json  iris_visualisation_data.json  training_results.json
3-Separate-Notebooks/models/model_1/: saved_model.pb
3-Separate-Notebooks/models/model_2/: saved_model.pb
3-Separate-Notebooks/models/model_3/: saved_model.pb
3-Separate-Notebooks/notebooks/: 1-Read-And-Transform-Data.ipynb  2-Visualise-data.ipynb  3-Train-Model.ipynb  4-Visualise-Results.ipynb
4-Separate-Code/data/processed/: iris_data.json  iris_training_data.json  training_results.json
4-Separate-Code/notebooks/: 1-Read-And-Transform-Data.ipynb  2-Visualise-data.ipynb  3-Train-Model.ipynb  4-Visualise-Results.ipynb
4-Separate-Code/source/: DataTransformation.py  Training.py  Visualisation.py
5-Unit-Tests/: README.md  pyproject.toml
5-Unit-Tests/notebooks/: 4-Visualise-Results.ipynb
5-Unit-Tests/source/: Visualisation.py
6-Papermill/: README.md
6-Papermill/notebooks/: 0-Running-the-Pipeline.ipynb  3-Train-Model.ipynb
6-Papermill/tests/: test_DataTransormation.py
Extra/: NotebookTemplate.ipynb  RunningConsoleCommands.ipynb  Widgets.ipynb
(+147 files in other folders)
