[tool.poetry]
name = "2020-ia-bonnes-pratiques-notebook"
version = "0.1.0"
description = ""
authors = ["Sylvain Hazard <sylvain.hazard@wiidii.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
sklearn = "^0.0"
keras = "^2.4.3"
pandas = "^1.1.3"
tensorflow = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
